src/components/datagrid/_data_grid_data_row.scss
.euiDataGridRow {
  // needed for footer cells to correctly position
  display: flex;
}

@include euiDataGridRowCell {
  @include euiFontSizeS;

  padding: $euiDataGridCellPaddingM;
  border-right: $euiDataGridVerticalBorder;
  border-bottom: $euiBorderThin;
  flex: 0 0 auto;
  background: $euiColorEmptyShade;
  position: relative;
  align-items: center;
  display: flex;
  overflow: hidden;

  // Hack to allow for all the focus guard stuff
  > * {
    max-width: 100%;
    width: 100%;
    height: 100%;
  }

  &.euiDataGridRowCell--firstColumn {
    border-left: $euiBorderThin;
  }

  &.euiDataGridRowCell--lastColumn {
    border-right-color: $euiBorderColor;
  }

  &:focus {
    @include euiDataGridCellFocus;
  }

  // Only add the transition effect on hover, so that it is instantaneous on focus
  // Long delays on hover to mitigate the accordion effect
  &:hover:not(:focus) {
    .euiDataGridRowCell__actionButtonIcon {
      animation-duration: $euiAnimSpeedExtraFast;
      animation-name: euiDataGridCellActionsSlideIn;
      animation-iteration-count: 1;
      animation-delay: $euiAnimSpeedNormal;
      animation-fill-mode: forwards;
    }
  }

  &:not(:hover),
  &.euiDataGridRowCell--open {
    .euiDataGridRowCell__actionButtonIcon {
      animation: none;
      margin-left: $euiDataGridCellPaddingM;
      width: $euiSizeM;
    }
  }

  // on focus, directly show action buttons (without animation), but still slide in the open popover button
  &:focus {
    .euiDataGridRowCell__actionButtonIcon {
      margin-left: $euiDataGridCellPaddingM;
      width: $euiSizeM;
    }
  }

  // if a cell is not hovered nor focused nor open via popover, don't show buttons in general
  &:not(:hover):not(:focus):not(.euiDataGridRowCell--open) {
    .euiDataGridRowCell__actionButtonIcon {
      display: none;
    }
  }

  &.euiDataGridRowCell--numeric {
    text-align: right;
  }

  &.euiDataGridRowCell--currency {
    text-align: right;
  }

  &.euiDataGridRowCell--uppercase {
    text-transform: uppercase;
  }

  &.euiDataGridRowCell--lowercase {
    text-transform: lowercase;
  }

  &.euiDataGridRowCell--capitalize {
    text-transform: capitalize;
  }

  .euiDataGridRowCell__definedHeight {
    @include euiTextBreakWord;
    flex-grow: 1;
  }

  // We only truncate if the cell is not a control column.
  &:not(.euiDataGridRowCell--controlColumn) {
    .euiDataGridRowCell__content,
    .euiDataGridRowCell__truncate,
    &.euiDataGridRowCell__truncate,
    .euiDataGridRowCell__expandContent {
      @include euiTextTruncate;
      overflow: hidden;
      white-space: nowrap;
    }
  }
}

.euiDataGridRowCell__popover {
  @include euiScrollBar;
  overflow: auto;
  // sass-lint:disable-block no-important
  max-width: 400px !important;
  max-height: 400px !important;
  z-index: $euiZDataGridCellPopover !important;
}

.euiDataGridRowCell__expand {
  width: 100%;
  max-width: 100%;
}

.euiDataGridRowCell__expandFlex {
  position: relative; // for positioning expand button
  display: flex;
  align-items: baseline;
  height: 100%;

  .euiDataGridRowCell--controlColumn & {
    align-items: center;
  }
}

.euiDataGridRowCell__expandContent {
  flex-grow: 1;
}

.euiDataGridRowCell__contentByHeight {
  flex-grow: 1;
  height: 100%;
}

// Cell actions
.euiDataGridRowCell__expandActions {
  display: flex;
}
@include euiDataGridRowCellActions($definedHeight: false) {
  flex-grow: 0;
}
@include euiDataGridRowCellActions($definedHeight: true) {
  background-color: $euiColorEmptyShade;
  position: absolute;
  right: 0;
  top: 0;
  padding: $euiDataGridCellPaddingM 0;
}

.euiDataGridRowCell__actionButtonIcon {
  height: $euiSizeM;
  border-radius: $euiBorderRadius / 2;
  width: 0;
  overflow: hidden;
  transition: none; // Have to take out the generic transition so it is instaneous on focus
}

// Row highlights
@include euiDataGridStyles(rowHoverHighlight) {
  .euiDataGridRow:hover {
    @include euiDataGridRowCell {
      // sass-lint:disable-block no-important
      // Needed to overtake striping
      background-color: $euiColorHighlight !important;
    }
    @include euiDataGridRowCellActions($definedHeight: true) {
      // sass-lint:disable-block no-important
      // Needed to overtake striping
      background-color: $euiColorHighlight !important;
    }
  }
}

// Stripes
@include euiDataGridStyles(stripes) {
  @include euiDataGridRowCell {
    &.euiDataGridRowCell--stripe {
      @include euiDataGridRowCellActions($definedHeight: true) {
        background-color: $euiColorLightestShade;
      }
      background: $euiColorLightestShade;
    }
  }
}

// Border alternates
@include euiDataGridStyles(bordersNone) {
  @include euiDataGridRowCell {
    // sass-lint:disable-block no-important
    border-color: transparent !important;
  }
}

@include euiDataGridStyles(bordersHorizontal) {
  @include euiDataGridRowCell {
    border-right-color: transparent;
    border-left-color: transparent;
  }
}

// Font alternates
@include euiDataGridStyles(fontSizeSmall) {
  @include euiDataGridRowCell {
    @include euiFontSizeXS;
  }
}

@include euiDataGridStyles(fontSizeLarge) {
  @include euiDataGridRowCell {
    @include euiFontSize;
  }
}

// Padding alternates
@include euiDataGridStyles(paddingSmall) {
  @include euiDataGridRowCell {
    padding: $euiDataGridCellPaddingS;
  }
}

@include euiDataGridStyles(paddingLarge) {
  @include euiDataGridRowCell {
    padding: $euiDataGridCellPaddingL;
  }
}

// Compressed density grids - height tweaks
@include euiDataGridStyles(fontSizeSmall, paddingSmall) {
  @include euiDataGridRowCellActions($definedHeight: true) {
    padding: ($euiDataGridCellPaddingS / 2) 0;
  }
  @include euiDataGridRowCellActions($definedHeight: false) {
    transform: translateY(1px);
  }
}

@keyframes euiDataGridCellActionsSlideIn {
  from {
    margin-left: 0;
    width: 0;
  }

  to {
    margin-left: $euiDataGridCellPaddingM;
    width: $euiSizeM;
  }
}

